Fixed photo-grid section and the appearance of horizontal scroll

--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,33 +1,17 @@
 .photo-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 16px 16px;
-  margin: 0;
-  padding: 0;
   padding-top: 92px;
   max-width: 100%;
-  list-style: none;
-}
 
-@media screen and (max-width: 1279px) {
-  .photo-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 14px 14px;
-  } 
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid {
-    grid-template-columns: 1fr 1fr;
-    gap: 16px 16px;
     padding-top: 88px;
   } 
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
-    grid-template-columns: 1fr;
-    gap: 12px;
     padding-top: 64px;
   } 
 }
